<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/edit_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:hint="First"
        android:textColor="@color/black" />
    <EditText
        android:id="@+id/edit_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Second"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/btn_plus"
        android:text="+"
        android:textSize="30sp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_div"
        android:text="/"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_mul"
        android:text="*"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>